# MouserInRust

./: .gitignore  CLAUDE.md  LogiControl.spec  Mouser-mac.spec  Mouser.spec  README.md  build.bat  main_qml.py
.github/workflows/: ci-rust.yml  release.yml
core/: config.py  device_layouts.py  hid_gesture.py  startup.py
rust/: Cargo.toml  build.bat  build.rs  build_linux.sh  build_macos_app.sh
rust/examples/: test_hid.rs  test_iokit.rs
rust/src/: accessibility.rs  actions.rs  app_catalog.rs  config.rs  device_layouts.rs  devices.rs  engine.rs  hid_gesture.rs  locale.rs  logging.rs  mac_hid.rs  main.rs  single_instance.rs  startup.rs
rust/src/app_detector/: linux.rs  macos.rs  mod.rs  windows.rs
rust/src/key_simulator/: linux.rs  macos.rs  mod.rs  windows.rs
rust/src/mouse_hook/: linux.rs  macos.rs  mod.rs  windows.rs
rust/src/ui/: mod.rs  settings_window.rs  tray.rs
tests/: test_autostart.py  test_config.py  test_startup.py
ui/: backend.py
