[package]
name = "mouser"
version = "0.1.0"
edition = "2021"
description = "A lightweight, cross-platform Logitech HID++ mouse remapper"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
dirs = "6"
hidapi = "2"
tempfile = "3"
anyhow = "1"
tray-icon = "0.19"
eframe = { version = "0.30", default-features = false, features = ["default_fonts", "glow"] }
egui = "0.30"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.59", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Registry",
] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
core-graphics = { version = "0.24", features = ["highsierra"] }
cocoa = "0.26"
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
evdev = "0.12"
nix = { version = "0.29", features = ["fs", "process"] }
libc = "0.2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
